--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Starter Template - Materialize</title>
+  <title>Budge It</title>
 
   <!-- CSS  -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -13,7 +13,7 @@
 <body>
   <div class="navbar-fixed">
   <nav class="light-blue lighten-1" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Budge It</a>
+  <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Budge It</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/sources">Income Sources</a></li>
