fix welcome banner

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <div class="section no-pad-bot" id="index-banner">
   <div class="container">
     <br><br>
-    <h1 class="header center orange-text">Hacker News</h1>
+    <h1 class="header center orange-text">Budge It</h1>
     <div class="row center">
-      <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+      <h5 class="header col s12 light">Manage your finances using the envelope method</h5>
     </div>
     <div class="row center">
       <a href="/envelope/create" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
