--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,10 @@
     </ul>
 
     <ul id="nav-mobile" class="side-nav">
-      <li><a href="#">Navbar Link</a></li>
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/sources">Income Sources</a></li>
+      <li><a href="/accounts">Accounts</a></li>
+      <li><a href="/distributions">Envelopes</a></li>
     </ul>
     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
   </div>
@@ -33,8 +36,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Budge It</h5>
+          <p class="grey-text text-lighten-4">Manage your finances using the envelope method. Envelopes represent a bucket of money you allocate funds to. Envelopes live in one or many accounts. You can fund your accounts via Income Sources.</p>
 
 
         </div>
